Otros cambios y nueva seccion agregada

--- a/style/presentacion/presentacion.css
+++ b/style/presentacion/presentacion.css
@@ -1,6 +1,7 @@
 .presentacion_contenedor {
     display: flex;
     height: calc((100vh) - (80px));
+    min-height: 700px;
     flex-direction: column;
     background-image: url('../../recursos/fotos/vector-lineas-3.png');
     background-size: 100%;
