--- a/style/menu/menu.css
+++ b/style/menu/menu.css
@@ -49,7 +49,7 @@
     height: 7px;
     border-radius: 4px;
     margin-top: 8px;
-    background-color: rgba(117, 117, 117, 0.514);
+    background-color: #1D90DF;
     transition: 0.2s ease;
 }
 
@@ -64,9 +64,9 @@
 /*? clases para agregar y eliminar al hacer click en el boton*/
 .menu_span-1-active {
     transform: rotate(45deg);
-    background-color: #002853;
-    top: 14px;
-    width: 90%;
+    background-color: #005893;
+    top: 15px;
+    width: 80%;
 }
 
 .menu_span-2-active {
@@ -75,8 +75,9 @@
 
 .menu_span-3-active {
     transform: rotate(-45deg);
-    background-color: #002853;
-    width: 90%;
+    background-color: #005893;
+    top: 0px;
+    width: 80%;
 }
 
 /*? Lista menu*/
@@ -112,7 +113,7 @@
     font-size: 1.5rem;
     font-weight: 500;
     color: #ffffff;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .menu_opciones--linkOpcion:hover {
@@ -143,7 +144,7 @@
         position: fixed;
     }
 .menu_opciones-inactivo {
-    background-color: #002853;
+    background-color: #005893;
     width: 100%;
     height: 40vh;
     font-family: 'Raleway';
