--- a/style/global-style.css
+++ b/style/global-style.css
@@ -20,6 +20,6 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #004ea1;
+    background-color: #1981c6;
     border-radius: 4px;
 }
