--- a/style/viajes/viajes.css
+++ b/style/viajes/viajes.css
@@ -26,6 +26,14 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+
+
+
+    opacity: 0;
+    /* Elementos inicialmente invisibles */
+    transform: translateY(30px);
+    /* Elementos inicialmente 30px hacia abajo */
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .cartas_excursiones {
@@ -182,7 +190,7 @@
     display: none;
 }
 
-.viajes_saber-mas{
+.viajes_saber-mas {
     background-color: #ffffff;
     color: #0091E3;
     font-family: 'Raleway';
@@ -192,8 +200,8 @@
     margin: 50px 0 90px 0;
 }
 
-.viajes_saber-mas:hover{
-text-decoration: underline;
+.viajes_saber-mas:hover {
+    text-decoration: underline;
 }
 
 @media screen and (min-width: 601px) and (max-width: 1024px) {
@@ -313,32 +321,32 @@ text-decoration: underline;
     .ilustracion-1 {
         animation: FiguraFlotante 10s infinite;
         width: 300px;
-}
+    }
 
-.ilustracion-sombra-1{
-    width: 150px;
-    animation: sombra 10s infinite;
-}
+    .ilustracion-sombra-1 {
+        width: 150px;
+        animation: sombra 10s infinite;
+    }
 
     .ilustracion-2 {
         animation: FiguraFlotante 13s infinite;
         width: 300px;
     }
 
-    .ilustracion-sombra-2{
+    .ilustracion-sombra-2 {
         width: 150px;
         animation: sombra 13s infinite;
-}
+    }
 
-.ilustracion-3 {
-    animation: FiguraFlotante 8s infinite;
-    width: 300px;
-}
+    .ilustracion-3 {
+        animation: FiguraFlotante 8s infinite;
+        width: 300px;
+    }
 
-.ilustracion-sombra-3{
-    width: 150px;
-    animation: sombra 8s infinite;
-}
+    .ilustracion-sombra-3 {
+        width: 150px;
+        animation: sombra 8s infinite;
+    }
 
     /*! PARA EL CARRUSEL */
     .slider {
@@ -378,25 +386,34 @@ text-decoration: underline;
 
 /*? ANIMACION PARA ICONOS ILUSTRACION */
 @keyframes FiguraFlotante {
+
     0%,
     100% {
         transform: scale(1) translateY(0) rotate(0);
-}
+    }
 
     50% {
         transform: scale(1.04) translateY(-20px) rotate(-2deg);
-}
+    }
 }
 
 @keyframes sombra {
+
     0%,
     100% {
         transform: scale(1);
         opacity: 0.2;
-}
+    }
 
     50% {
         transform: scale(0.7);
         opacity: 0.05;
+    }
 }
+
+.aparecer {
+    opacity: 1;
+    /* Hacer que los elementos sean visibles */
+    transform: translateY(0);
+    /* Mover los elementos a su posición original */
 }
