Eliminar submódulo comentarios

--- a/style/menu/menu.css
+++ b/style/menu/menu.css
@@ -53,11 +53,11 @@
     transition: 0.2s ease;
 }
 
-.menu_span-1{
+.menu_span-1 {
     width: 60%;
 }
 
-.menu_span-3{
+.menu_span-3 {
     width: 60%;
 }
 
@@ -82,38 +82,37 @@
 
 /*? Lista menu*/
 .menu_opciones {
-    display: none;
-    padding-bottom: 30px;
-}
-
-.menu_opciones-inactivo {
-    background-color: #002853;
-    width: 100%;
-    height: 40vh;
+    z-index: 20;
+    position: fixed;
     font-family: 'Raleway';
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    animation: aparicion 0.2s ease-in-out;
     animation-fill-mode: forwards;
     box-shadow: 0 5px 10px #0000003e;
+    background-color: #002853;
+    opacity: 0;
+    transform: translateX(100vh);
+    transition: opacity 0.3s ease, transform 0.2s ease;
 }
 
 .menu_opciones--links {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    text-align: center;
     height: 100%;
-    height: 100%;
+    min-height: 50vh;
+    padding-bottom: 20px;
 }
 
 .menu_opciones--linkOpcion {
     margin-top: 20px;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 500;
     color: #ffffff;
-    opacity: 0.9;
+    display: flex;
+    justify-content: center;
 }
 
 .menu_opciones--linkOpcion:hover {
@@ -121,40 +120,33 @@
     transition: 0.3s ease;
 }
 
-.menu_contacto {
-    display: none;
+.menu_opciones--linkOpcion a {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    opacity: 0.7;
 }
 
-@keyframes aparicion {
-    0% {
-        opacity: 0;
-        height: 0vh;
-    }
+.menu_opciones--linkOpcion a:hover {
+    opacity: 1;
+    transition: 0.3s ease;
+}
 
-    100% {
-        opacity: 1;
-    }
+.menu_opciones--linkOpcion img {
+    width: 30px;
+    margin-right: 20px;
+}
+
+.menu_contacto {
+    display: none;
 }
 
 /*! Para hacerlo responsive */
 /* Estilos para tablet (de 601px a 1024px) */
 @media screen and (max-width: 1024px) {
-.menu_opciones {
-        z-index: 20;
-        position: fixed;
+    .menu_opciones--links {
+        min-height: 30vh;
     }
-.menu_opciones-inactivo {
-    background-color: #005893;
-    width: 100%;
-    height: 40vh;
-    font-family: 'Raleway';
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    animation: aparicion 0.2s ease-in-out;
-    animation-fill-mode: forwards;
-    box-shadow: 0 5px 10px #0000003e;
-}
 }
 
 /* Estilos para PC (a partir de 1025px) */
@@ -163,7 +155,7 @@
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 60px;
+        height: 70px;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.07);
     }
 
@@ -176,7 +168,6 @@
     .menu_contenedor--Logo {
         justify-content: center;
         width: 100%;
-        height: 11vh;
         background-color: #ffffff00;
         box-shadow: none;
     }
@@ -186,30 +177,30 @@
     }
 
     .menu_opciones {
-        font-family: 'Raleway';
-        display: flex;
-        width: 80%;
-        justify-content: end;
-        padding-bottom: 0px;
+        z-index: initial;
+        position: static;
+        width: 70%;
+        box-shadow: none;
+        background-color: #F5F5F5;
+        opacity: 1;
+        transform: translateX(0);
+        transition: none;
+        align-items: end;
     }
 
     .menu_opciones--links {
         display: flex;
         flex-direction: row;
-    }
-
-    .menu_opciones--links {
         margin-top: 0;
+        padding: 0;
         width: 70%;
         height: 100%;
-        justify-content: space-evenly;
-        align-items: center;
+        min-height: 0;
     }
 
     .menu_opciones--linkOpcion {
         margin-top: 0;
         font-size: 1.2rem;
-        font-weight: 500;
         color: rgb(97, 97, 97);
         display: flex;
         align-items: center;
@@ -224,8 +215,21 @@
         background-color: #0056b114;
     }
 
-    .menu_opciones--linkOpcion:hover a {
-        color: #00356d;
+    .menu_opciones--linkOpcion a {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        justify-content: center;
+    }
+
+    .menu_opciones--linkOpcion a:hover {
+        opacity: 1;
+        color: #005b98;
+        transition: 0.3s ease;
+    }
+
+    .menu_opciones--linkOpcion img {
+        display: none;
     }
 
     .menu_contacto {
@@ -252,4 +256,11 @@
         transition: 0.2s ease;
         box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.273);
     }
+}
+
+
+.menu_opciones-inactivo {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 0.3s ease, transform 0.2s ease;
 }
