--- a/style/testimonios/testimonios.css
+++ b/style/testimonios/testimonios.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 0;
+    padding: 80px 0 30px 0;
 }
 
 .contenedor_texto-testimonios{
