--- a/style/comentarios/comentarios.css
+++ b/style/comentarios/comentarios.css
@@ -47,9 +47,10 @@
 
 .comentario_ilustracion{
     animation: Flotando 10s infinite;
-    margin: 0;
+    margin-top: 30px;
     padding: 0;
     width: 300px;
+    max-width: 90%;
     -webkit-animation: Flotando 10s infinite;
 }
 
