--- a/style/footer/redes.css
+++ b/style/footer/redes.css
@@ -1,9 +1,13 @@
+#footer{
+    background-color: #002853;
+}
 .footer_contenedor{
+    margin: 0;
+    padding: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #002853;
 }
 
 .footer_redes-sociales{
