--- a/style/footer/copy.css
+++ b/style/footer/copy.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     color: rgb(255, 255, 255);
-    margin: 20px 20px 40px 20px;
+    margin: 20px 20px 20px 20px;
     font-weight: bold;
 }
 
@@ -20,4 +20,29 @@
     margin-top: 7px;
     opacity: 0.7;
     font-size: 1.1rem;
+}
+
+.firma_personal-contenedor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: #ffffff;
+    font-family: 'Raleway';
+    margin-bottom: 5px;
+    font-size: 0.7rem;
+}
+
+.firma_personal-contenedor p{
+    opacity: 0.1;
+}
+
+.firma_personal-contenedor a{
+    margin: 0 0 0 5px;
+    opacity: 0.1;
+}
+
+.firma_personal-contenedor a:hover{
+    opacity: 0.7;
+    transition: 0.2s ease;
 }
