--- a/style/menu/menu.css
+++ b/style/menu/menu.css
@@ -1,6 +1,7 @@
 .menu_contenedor {
     display: flex;
     flex-direction: column;
+    background-color: #FFFFFF;
 }
 
 .menu_contenedor--Logo {
@@ -9,7 +10,7 @@
     justify-content: space-between;
     width: 100%;
     height: 80PX;
-    background-color: #f0f0f0;
+    background-color: #FFFFFF;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.07);
 }
 
@@ -139,6 +140,7 @@
 
 .menu_contacto {
     display: none;
+    background-color: #fff;
 }
 
 /*! Para hacerlo responsive */
@@ -163,6 +165,7 @@
         width: 20%;
         align-items: center;
         justify-content: center;
+        
     }
 
     .menu_contenedor--Logo {
@@ -181,7 +184,7 @@
         position: static;
         width: 70%;
         box-shadow: none;
-        background-color: #F5F5F5;
+        background-color: #FFFFFF;
         opacity: 1;
         transform: translateX(0);
         transition: none;
